--- a/QualityAssessor/CMakeLists.txt
+++ b/QualityAssessor/CMakeLists.txt
@@ -5,7 +5,6 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fPIC")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fPIC")
 
-add_definitions(-DVIPL_EXPORTS)
 add_definitions(-DSEETA_EXPORTS)
 
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
@@ -28,11 +27,6 @@ file(GLOB_RECURSE ORZ_SRC_FILES
     ${CMAKE_CURRENT_SOURCE_DIR}/orz/*.cpp
     )
 
-file(GLOB INCLUDE_FILES
-    ${CMAKE_CURRENT_SOURCE_DIR}/VIPL*.h
-    ${CMAKE_CURRENT_SOURCE_DIR}/VIPL*.hh
-    ${CMAKE_CURRENT_SOURCE_DIR}/VIPL*.hpp
-    )
 file(GLOB_RECURSE SEETA_API_SRC_FILES
     ${CMAKE_CURRENT_SOURCE_DIR}/src/*.c
     ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cc
@@ -40,11 +34,17 @@ file(GLOB_RECURSE SEETA_API_SRC_FILES
     )
 
 file(GLOB_RECURSE SEETA_INCLUDE_FILES
-    ${CMAKE_CURRENT_SOURCE_DIR}/include/*.h
-    ${CMAKE_CURRENT_SOURCE_DIR}/include/*.hh
-    ${CMAKE_CURRENT_SOURCE_DIR}/include/*.hpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/include/seeta/*.h
+    ${CMAKE_CURRENT_SOURCE_DIR}/include/seeta/*.hh
+    ${CMAKE_CURRENT_SOURCE_DIR}/include/seeta/*.hpp
     )
 
+file(GLOB_RECURSE SEETA_INCLUDE_COMMON_FILES
+    ${CMAKE_CURRENT_SOURCE_DIR}/include/seeta/Common/*.h
+    ${CMAKE_CURRENT_SOURCE_DIR}/include/seeta/Common/*.hh
+    ${CMAKE_CURRENT_SOURCE_DIR}/include/seeta/Common/*.hpp
+    )
+	
 list(APPEND SRC_FILES ${SEETA_SRC_FILES})
 list(APPEND SRC_FILES ${ORZ_SRC_FILES})
 list(APPEND SRC_FILES ${ROOT_SRC_FILES})
@@ -115,5 +115,5 @@ foreach(header ${SEETA_INCLUDE_FILES})
 endforeach()
 
 install(TARGETS ${PROJECT_NAME}_SHARED DESTINATION ${CMAKE_INSTALL_PREFIX}/${ENV_LIBRARY_DIR})
-install(FILES ${INCLUDE_FILES} DESTINATION ${CMAKE_INSTALL_PREFIX}/${ENV_INCLUDE_DIR})
+install(FILES ${SEETA_INCLUDE_COMMON_FILES} DESTINATION ${CMAKE_INSTALL_PREFIX}/${ENV_INCLUDE_DIR}/seeta/Common)
 install(FILES ${SEETA_INCLUDE_FILES} DESTINATION ${CMAKE_INSTALL_PREFIX}/${ENV_INCLUDE_DIR}/seeta)
